# Claim-denial-prediction-root-cause-classifier

./: .env.example  .gitignore  COMPLETE_PROJECT_REPORT.md  MODEL_CARD.md  README.md  business_rule_review_summary.csv  cleaning_column_actions.csv  cleaning_null_before_after.csv  cleaning_string_null_fixes.csv  cleaning_summary.csv  duplicate_detection_summary.csv  eda_numeric_summary.csv  encoding_summary.csv  feature_rule_review_summary.csv  frequency_encoding_maps.csv  premodel_denial_by_place.csv  premodel_eda_summary.csv  premodel_statistical_tests.csv  pyproject.toml  requirements.txt  run_app.ps1  run_pipeline.ps1  sample_api_request.py  setup_project.ps1  step01_eda.py  step02_null_detection.py  step03_duplicate_outlier.py  step04_cleaning.py  step06_encoding.py  step07_premodel_eda.py  step08_model.py  step10_synthetic_rarc_data.py  step11_nlp_classifier.py  step12_fastapi.py  step13_Dashboard.py  target_definition_card.md
app/: __init__.py  step12_fastapi.py  step13_Dashboard.py
docs/: COMPLETE_PROJECT_REPORT.md  MODEL_CARD.md
nlp_outputs/: rarc_category_mapping.csv  rarc_denial_dataset.csv  rarc_reference_summary.csv  rarc_root_cause_taxonomy.json  rarc_taxonomy_model_card.md  rarc_test.csv  rarc_train.csv  real_rarc_codes.csv
scripts/: sample_api_request.py
src/: step01_eda.py  step02_null_detection.py  step03_duplicate_outlier.py  step04_cleaning.py  step05_credentials.py  step06_encoding.py  step07_premodel_eda.py  step08_model.py  step09_rarc_taxonomy.py  step10_synthetic_rarc_data.py  step10a_prepare_real_rarc_codes.py  step11_nlp_classifier.py
(+16 files in other folders)
