[project]
name = "claim-denial-prediction"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "joblib",
    "lightgbm",
    "fastapi",
    "uvicorn",
    "pydantic",
    "shap",
]

[tool.vercel]
entrypoint = "app.step12_fastapi:app"
