[project]
name = "claim-denial-prediction"
version = "0.1.0"
requires-python = ">=3.9,<3.10"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "joblib",
    "lightgbm",
    "shap",
    "fastapi",
    "uvicorn",
    "pydantic",
]

[tool.vercel]
entrypoint = "app.step12_fastapi:app"
