[project]
name = "claim-denial-prediction"
version = "0.1.0"
requires-python = ">=3.9,<3.10"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "joblib",
    "lightgbm",
    "shap>=0.46.0",
    "numba>=0.59.0",
    "llvmlite>=0.42.0",
    "fastapi",
    "uvicorn",
    "pydantic",
]

[tool.vercel]
entrypoint = "app.step12_fastapi:app"
